2007-01-07  Brian Matherly  <brian@gramps-project.org>
	* src/SubstKeywords.py: Fix 0000813: IDs in graphical reports error

2007-01-07  Don Allingham  <don@gramps-project.org>
	* src/RelLib/*.py: pylint fixes

2007-01-07  Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/Utils.py: probably_alive patch

2007-01-06  Piotr Czubaszek  <pioterus@gmail.com>
	* src/plugins/rel_pl.py: Update.

2007-01-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Upgrade media
	refs for the sources.
	* src/plugins/ExportVCard.py (get_option_box): Typo.

2007-01-06  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditAddress.py: new date entry
	* src/Editors/_EditLdsOrd.py: new date_entry
	* src/Editors/_EditSourceRef.py: new date_entry
	* src/Editors/_EditEventRef.py: new date_entry
	* src/Editors/_EditMedia.py: new date_entry
	* src/Editors/_EditName.py: new date_entry
	* src/Editors/_EditEvent.py: new date_entry
	* src/GrampsWidgets.py: add options to ValidatedDateEntry to specify colors and icon
	* src/glade/gramps.glade: new date_entry
	* src/Errors.py: new date_entry
	* src/DateEdit.py: new date_entry
	* src/images/stock_calendar.png: added
	* src/gramps_main.py: add gramps-date as a stock icon

2007-01-05 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/docgen/GtkPrint.py: minor tweeks

2007-01-05 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/docgen/GtkPrint.py: Add initial stab at GtkPrint.
	
2007-01-04  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsWidgets.py: Add ValidatableMaskedEntry what extends
	the MaskedEntry with validation feature
	* TODO: kiwi entry removed

2007-01-03  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_EventView.py: lint fixes
	* src/DataViews/_PersonView.py: lint fixes
	* src/RelLib/_Person.py: lint fixes
	* src/RelLib/_PrimaryObject.py: lint fixes
	* src/Selectors/_BaseSelector.py: lint fixes
	* src/GrampsWidgets.py: lint fixes
	* src/Spell.py: lint fixes